--- a/src/TextTools/TextTools.csproj
+++ b/src/TextTools/TextTools.csproj
@@ -6,7 +6,7 @@
       <Nullable>enable</Nullable>
       <Version>0.0.1</Version>
       <GenerateDocumentationFile>true</GenerateDocumentationFile>
-      <DocumentationFile>..\..\docs\xml\NewCmdLineApp.xml</DocumentationFile>
+      <DocumentationFile>..\..\docs\xml\TextTools.xml</DocumentationFile>
       <IsTestProject>false</IsTestProject>
       <PublishTrimmed>true</PublishTrimmed>
       <PublishSingleFile>true</PublishSingleFile>
