First draft of iaaudit command

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,8 +10,13 @@
          "request": "launch",
          "preLaunchTask": "build",
          // If you have changed target frameworks, make sure to update the program path.
-         "program": "${workspaceFolder}/src/TextTools/bin/Debug/net7.0/TextTools.dll",
-         "args": [],
+         "program": "${workspaceFolder}/src/TextTools/bin/Debug/net7.0/win-x64/TextTools.dll",
+         "args": [
+            "iaaudit",
+            "-r",
+            "-d=C:\\temp",
+            "-n=C:\\temp"
+         ],
          "cwd": "${workspaceFolder}/src/TextTools",
          // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
          "console": "internalConsole",
